# github-wiki-organisers

./: .env.sample  .gitignore  CHANGELOG.md  README.md  SECURITY.md
PyPI/: README.md  pyproject.toml  requirements.txt  tasks.py
RubyGem/: Gemfile  README.md  Rakefile  Steepfile  spreen-wiki.gemspec
python/: README.md  export_unowned_wiki_list.py  main.py  pyproject.toml  tasks.py  update_wiki_list_on_home_and_sidebar.py
python/exec/: export_unknown_wiki_count_list_by_namespace.py  export_unknown_wiki_list_for_llm.py  export_unowned_wiki_count_list_by_namespace.py  export_unowned_wiki_list.py  update_wiki_list_on_home_and_sidebar.py
python/src/: application.py  directory.py  home.py  sidebar.py  unknown_wiki_count_list_exporter.py  unknown_wiki_list_exporter_for_llm.py  unowned_wiki_count_list_exporter.py  unowned_wiki_list_exporter.py
python/src/github_wiki_organiser/: application.py  cli.py  configuration.py  home.py
python/src/github_wiki_organiser/templates/owner/: japanese.md
python/src/spreen_wiki/: __init__.py  cli.py  unknown_wiki_count_list_exporter.py  unknown_wiki_list_exporter_for_llm.py
python/test/: conftest.py  test_application.py  test_configuration.py  test_directory.py  test_home.py  test_sidebar.py  test_unknown_wiki_count_list_exporter.py  test_unknown_wiki_list_exporter_for_llm.py  test_unowned_wiki_count_list_exporter.py  test_unowned_wiki_list_exporter.py
python/test/fixtures/home/: english_categorised.md  japanese_categorised.md  japanese_owned_non_overflow.md
python/test/fixtures/sidebar/: english_owned.md
ruby/: .rubocop.yml  (+9 more)
(+99 files in other folders)
