[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "github-wiki-organiser"
version = "0.1.0"
description = "Organise GitHub wiki Home and _Sidebar pages by owner or category."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [{ name = "hayat01sh1da" }]
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]
keywords = ["github", "wiki", "documentation", "sidebar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]

[project.urls]
Homepage = "https://github.com/hayat01sh1da/github-wiki-organisers"
Source = "https://github.com/hayat01sh1da/github-wiki-organisers"
Changelog = "https://github.com/hayat01sh1da/github-wiki-organisers/blob/master/CHANGELOG.md"

[project.scripts]
wiki-organise = "github_wiki_organiser.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
github_wiki_organiser = ["templates/**/*.md", "py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"
